--- a/exemplos/challenge-32/rest-api/package.json
+++ b/exemplos/challenge-32/rest-api/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.16.2"
+    "body": "^5.1.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "nodemon": "^1.12.4",
+    "parser": "^0.1.4"
   }
 }
